<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.clara.myown.ShowRouteActivity">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:srcCompat="@drawable/route_photo"
        android:id="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:contentDescription="@string/image_of_route" />

    <RelativeLayout
        android:id="@+id/activity_show_routeInfo"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.clara.myown.ShowRouteActivity"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2">

        <TextView
            android:text="@string/name_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/tvName"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGrade"
            android:textSize="40sp"
            android:layout_below="@+id/tvName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:text="@string/description_of_route_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescr"
            android:textSize="12sp"
            android:layout_below="@+id/tvGrade"
            android:layout_alignLeft="@+id/tvName"
            android:layout_alignStart="@+id/tvName"
            android:layout_marginTop="12dp" />

    </RelativeLayout>

    <Button
        android:text="@string/all_routes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:onClick="goToRoutesList"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
